        - Added new template set (just web)
          Thanks Shawn J. Wallace
        - Created in mini-calendar for the verdilak layout
        - XHTML 4.01 compliance
        - Fixed all user preferences (within that user) getting overwritten when any app makes
          a change to them.
        - Fixed E-Mail display inline graphics
        - Fixed free/busy displaying incorrect title date

[0.9.8] - Merged in patch for UW-Maildir IMAP server support
          Thanks milosch
        - Fixed setup not detecting installed databases with PHP 3
        - Fixed repeating entries being saved properly.
        - Added ability for admin to edit any calendar event.
        - Fixed entries showing improperly on wrong date.
        - Fixed file uploads through filemanager.
        - Fixed repeating entries Month select box.
        - Fixed calendar week selector starting on Monday on footer.
        - Fixed buggy calendar saving when no groups are selected with group access.
        - Fixed submitting of calendar entry when javascript turned off.
        - Fixed calendar preferences not updating properly
        - Fixed denylogin form not display and converted it to a template.
        - Added select box option for multiable domains in login.php
        - Fixed proxy server support for headlines and check for new version on main screen.
        - Fixed headlines preferences and converted headline preferences to a template
        - Fixed pgsql upgrade from beta path.
        - Fixed chronological ordering of calendar events.
        - Changed javascript validation to server side upon submitting calendar events.
        - Merged patch for parsing of non-compliant rfc822 email addresses.
          Thanks bwulf
        - Fixed the addressbook not opening when composing email.
        - Applied patch to fix md5 en/decryption.
          Thanks milosch
        - Fixed login message not showing up.